--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/portfolio-website/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/portfolio-website/logo192.png"/><link rel="manifest" href="/portfolio-website/manifest.json"/><title>React App</title><script defer="defer" src="/portfolio-website/static/js/main.1e8a6cd8.js"></script><link href="/portfolio-website/static/css/main.a12ed9e8.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Megha Shyam - AI Engineer | ML Enthusiast | Data Scientist</title>
+    <meta name="description" content="Megha Shyam - Aspiring AI Engineer passionate about solving real-world problems using Generative AI, NLP, and Deep Learning. View my portfolio, projects, and experience." />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
